[CheckableButton, ResourceList] fix checkbox alignment  (#9453)
<!--
  ☝️How to write a good PR title:
- Prefix it with [ComponentName] (if applicable), for example: [Button]
  - Start with a verb, for example: Add, Delete, Improve, Fix…
  - Give as much context as necessary and as little as possible
  - Prefix it with [WIP] while it’s a work in progress
-->

### WHY are these changes introduced?

Fixes https://github.com/Shopify/polaris-summer-editions/issues/441

<!--
  Context about the problem that’s being addressed.
-->

### WHAT is this pull request doing?

Before: 


https://github.com/Shopify/polaris/assets/12119389/d321464a-e98c-4e4d-91ed-72127f1f8f24


After:


https://github.com/Shopify/polaris/assets/12119389/e42cb80f-b025-453e-8a33-24804e4d47a4


### How to 🎩

🖥 [Local development
instructions](https://github.com/Shopify/polaris/blob/main/README.md#local-development)
🗒 [General tophatting
guidelines](https://github.com/Shopify/polaris/blob/main/documentation/Tophatting.md)
📄 [Changelog
guidelines](https://github.com/Shopify/polaris/blob/main/.github/CONTRIBUTING.md#changelog)

<!--
  Give as much information as needed to experiment with the component
  in the playground.
-->

<details>
<summary>Copy-paste this code in
<code>playground/Playground.tsx</code>:</summary>

```jsx
import React from 'react';
import {Page} from '../src';

export function Playground() {
  return (
    <Page title="Playground">
      {/* Add the code you want to test in here */}
    </Page>
  );
}
```

</details>

### 🎩 checklist

- [ ] Tested on
[mobile](https://github.com/Shopify/polaris/blob/main/documentation/Tophatting.md#cross-browser-testing)
- [ ] Tested on [multiple
browsers](https://help.shopify.com/en/manual/shopify-admin/supported-browsers)
- [ ] Tested for
[accessibility](https://github.com/Shopify/polaris/blob/main/documentation/Accessibility%20testing.md)
- [ ] Updated the component's `README.md

--- a/polaris-react/src/components/CheckableButton/CheckableButton.scss
+++ b/polaris-react/src/components/CheckableButton/CheckableButton.scss
@@ -40,13 +40,15 @@
 
 .Checkbox {
   pointer-events: none;
-  height: 20px;
-  width: 20px;
 
-  #{$se23} & {
-    height: 18px;
-    width: 18px;
-  }
+  /*
+      We do not want to worry about setting the height and width explicitly.
+      We want to inherits the height and width of its child (in this case the Checkbox component).
+
+      We do this using flexbox because "the cross size of each flex container is the minimum size necessary to contain the flex items" as per the spec.
+      https://www.w3.org/TR/css-flexbox-1/#flex-lines
+  */
+  display: flex;
 }
 
 .Label {
